CWrapper/RHI/RHI.h

typedef struct LunaRhiDeviceMemoryHandle
{
    luna_handle_t object;
    void* idevice_memory;
} LunaRhiDeviceMemoryHandle;
typedef struct LunaRhiQueryHeapDesc
{
    uint32_t type;
    uint32_t count;
} LunaRhiQueryHeapDesc;
typedef struct LunaRhiPipelineStatistics
{
    uint64_t vs_invocations;
    uint64_t rasterizer_input_primitives;
    uint64_t rendered_primitives;
    uint64_t ps_invocations;
    uint64_t cs_invocations;
} LunaRhiPipelineStatistics;
typedef struct LunaRhiViewport
{
    float top_left_x;
    float top_left_y;
    float width;
    float height;
    float min_depth;
    float max_depth;
} LunaRhiViewport;
typedef struct LunaRhiRectI
{
    int32_t offset_x;
    int32_t offset_y;
    int32_t width;
    int32_t height;
} LunaRhiRectI;
typedef struct LunaRhiVertexBufferView
{
    void* buffer;
    uint64_t offset;
    uint32_t size;
    uint32_t element_size;
} LunaRhiVertexBufferView;
typedef struct LunaRhiBufferDesc
{
    uint64_t size;
    uint32_t usages;
    uint32_t flags;
} LunaRhiBufferDesc;
typedef struct LunaRhiBufferViewDesc
{
    uint64_t first_element;
    void* buffer;
    uint32_t element_count;
    uint32_t element_size;
} LunaRhiBufferViewDesc;
typedef struct LunaRhiSubresourceIndex
{
    uint32_t mip_slice;
    uint32_t array_slice;
} LunaRhiSubresourceIndex;
typedef struct LunaRhiComputePassDesc
{
    void* timestamp_query_heap;
    void* pipeline_statistics_query_heap;
    uint32_t timestamp_query_begin_pass_write_index;
    uint32_t timestamp_query_end_pass_write_index;
    uint32_t pipeline_statistics_query_write_index;
} LunaRhiComputePassDesc;
typedef struct LunaRhiCopyPassDesc
{
    void* timestamp_query_heap;
    uint32_t timestamp_query_begin_pass_write_index;
    uint32_t timestamp_query_end_pass_write_index;
} LunaRhiCopyPassDesc;
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_graphics_pipeline_state(void* self, void* pipeline_state);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_graphics_descriptor_set(void* self, uint32_t index, void* descriptor_set);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_graphics_descriptor_sets(void* self, uint32_t start_index, const void* const* descriptor_sets, uint64_t descriptor_set_count);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_vertex_buffer(void* self, uint32_t slot, void* buffer, uint64_t offset, uint32_t size, uint32_t element_size);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_vertex_buffers(void* self, uint32_t start_slot, const LunaRhiVertexBufferView* views, uint64_t view_count);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_index_buffer(void* self, void* buffer, uint64_t offset, uint32_t size, uint32_t format);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_viewport(void* self, float top_left_x, float top_left_y, float width, float height, float min_depth, float max_depth);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_viewports(void* self, const LunaRhiViewport* viewports, uint64_t viewport_count);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_scissor_rect(void* self, int32_t offset_x, int32_t offset_y, int32_t width, int32_t height);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_scissor_rects(void* self, const LunaRhiRectI* rects, uint64_t rect_count);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_blend_factor(void* self, float red, float green, float blue, float alpha);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_stencil_ref(void* self, uint32_t stencil_ref);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_draw(void* self, uint32_t vertex_count, uint32_t start_vertex_location);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_draw_indexed(void* self, uint32_t index_count, uint32_t start_index_location, int32_t base_vertex_location);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_draw_instanced(void* self, uint32_t vertex_count_per_instance, uint32_t instance_count, uint32_t start_vertex_location, uint32_t start_instance_location);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_draw_indexed_instanced(void* self, uint32_t index_count_per_instance, uint32_t instance_count, uint32_t start_index_location, int32_t base_vertex_location, uint32_t start_instance_location);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_begin_occlusion_query(void* self, uint32_t mode, uint32_t index);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_end_occlusion_query(void* self, uint32_t index);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_end_render_pass(void* self);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_begin_compute_pass(void* self, const LunaRhiComputePassDesc* desc);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_compute_pipeline_layout(void* self, void* pipeline_layout);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_compute_pipeline_state(void* self, void* pipeline_state);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_compute_descriptor_set(void* self, uint32_t index, void* descriptor_set);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_set_compute_descriptor_sets(void* self, uint32_t start_index, const void* const* descriptor_sets, uint64_t descriptor_set_count);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_dispatch(void* self, uint32_t thread_group_count_x, uint32_t thread_group_count_y, uint32_t thread_group_count_z);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_end_compute_pass(void* self);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_begin_copy_pass(void* self, const LunaRhiCopyPassDesc* desc);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_copy_resource(void* self, luna_handle_t dst_object, luna_handle_t src_object);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_copy_buffer(void* self, void* dst, uint64_t dst_offset, void* src, uint64_t src_offset, uint64_t copy_bytes);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_copy_texture(void* self, void* dst, LunaRhiSubresourceIndex dst_subresource, uint32_t dst_x, uint32_t dst_y, uint32_t dst_z, void* src, LunaRhiSubresourceIndex src_subresource, uint32_t src_x, uint32_t src_y, uint32_t src_z, uint32_t copy_width, uint32_t copy_height, uint32_t copy_depth);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_copy_buffer_to_texture(void* self, void* dst, LunaRhiSubresourceIndex dst_subresource, uint32_t dst_x, uint32_t dst_y, uint32_t dst_z, void* src, uint64_t src_offset, uint32_t src_row_pitch, uint32_t src_slice_pitch, uint32_t copy_width, uint32_t copy_height, uint32_t copy_depth);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_copy_texture_to_buffer(void* self, void* dst, uint64_t dst_offset, uint32_t dst_row_pitch, uint32_t dst_slice_pitch, void* src, LunaRhiSubresourceIndex src_subresource, uint32_t src_x, uint32_t src_y, uint32_t src_z, uint32_t copy_width, uint32_t copy_height, uint32_t copy_depth);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_end_copy_pass(void* self);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_submit(void* self, int32_t allow_host_waiting);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_submit_with_fences(void* self, const void* const* wait_fences, uint64_t wait_fence_count, const void* const* signal_fences, uint64_t signal_fence_count, int32_t allow_host_waiting);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_wait(void* self);
LUNA_RHI_C_API luna_errcode_t luna_rhi_command_buffer_try_wait(void* self, int32_t* out_waited);
LUNA_RHI_C_API luna_errcode_t luna_rhi_buffer_get_desc(void* self, LunaRhiBufferDesc* out_desc);
LUNA_RHI_C_API luna_errcode_t luna_rhi_buffer_map(void* self, uint64_t read_begin, uint64_t read_end, void** out_data);
LUNA_RHI_C_API luna_errcode_t luna_rhi_buffer_unmap(void* self, uint64_t write_begin, uint64_t write_end);
LUNA_RHI_C_API luna_errcode_t luna_rhi_resource_get_memory(luna_handle_t object, LunaRhiDeviceMemoryHandle* out_memory);
LUNA_RHI_C_API luna_errcode_t luna_rhi_device_memory_get_memory_type(void* self, uint32_t* out_memory_type);
LUNA_RHI_C_API luna_errcode_t luna_rhi_device_memory_get_size(void* self, uint64_t* out_size);
LUNA_RHI_C_API luna_errcode_t luna_rhi_query_heap_get_desc(void* self, LunaRhiQueryHeapDesc* out_desc);
LUNA_RHI_C_API luna_errcode_t luna_rhi_query_heap_get_timestamp_values(void* self, uint32_t index, uint32_t count, uint64_t* out_values);
LUNA_RHI_C_API luna_errcode_t luna_rhi_query_heap_get_occlusion_values(void* self, uint32_t index, uint32_t count, uint64_t* out_values);
LUNA_RHI_C_API luna_errcode_t luna_rhi_query_heap_get_pipeline_statistics_values(void* self, uint32_t index, uint32_t count, LunaRhiPipelineStatistics* out_values);
LUNA_RHI_C_API luna_errcode_t luna_rhi_descriptor_set_update_buffer_view(void* self, uint32_t binding_slot, uint32_t first_array_index, uint32_t descriptor_type, const LunaRhiBufferViewDesc* views, uint32_t view_count);