Managed/RHI/Internal/RhiNative.cs


    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_graphics_pipeline_state")]
    internal static extern UIntPtr CommandBufferSetGraphicsPipelineState(IntPtr commandBuffer, IntPtr pipelineState);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_graphics_descriptor_set")]
    internal static extern UIntPtr CommandBufferSetGraphicsDescriptorSet(IntPtr commandBuffer, uint index, IntPtr descriptorSet);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_graphics_descriptor_sets")]
    internal static extern UIntPtr CommandBufferSetGraphicsDescriptorSets(
        IntPtr commandBuffer,
        uint startIndex,
        [In] IntPtr[]? descriptorSets,
        ulong descriptorSetCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_vertex_buffer")]
    internal static extern UIntPtr CommandBufferSetVertexBuffer(IntPtr commandBuffer, uint slot, IntPtr buffer, ulong offset, uint size, uint elementSize);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_vertex_buffers")]
    internal static extern UIntPtr CommandBufferSetVertexBuffers(
        IntPtr commandBuffer,
        uint startSlot,
        [In] NativeVertexBufferView[]? views,
        ulong viewCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_index_buffer")]
    internal static extern UIntPtr CommandBufferSetIndexBuffer(IntPtr commandBuffer, IntPtr buffer, ulong offset, uint size, uint format);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_viewport")]
    internal static extern UIntPtr CommandBufferSetViewport(IntPtr commandBuffer, float topLeftX, float topLeftY, float width, float height, float minDepth, float maxDepth);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_viewports")]
    internal static extern UIntPtr CommandBufferSetViewports(
        IntPtr commandBuffer,
        [In] NativeViewport[]? viewports,
        ulong viewportCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_scissor_rect")]
    internal static extern UIntPtr CommandBufferSetScissorRect(IntPtr commandBuffer, int offsetX, int offsetY, int width, int height);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_scissor_rects")]
    internal static extern UIntPtr CommandBufferSetScissorRects(
        IntPtr commandBuffer,
        [In] NativeRhiRectI[]? rects,
        ulong rectCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_blend_factor")]
    internal static extern UIntPtr CommandBufferSetBlendFactor(IntPtr commandBuffer, float red, float green, float blue, float alpha);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_stencil_ref")]
    internal static extern UIntPtr CommandBufferSetStencilRef(IntPtr commandBuffer, uint stencilRef);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_draw")]
    internal static extern UIntPtr CommandBufferDraw(IntPtr commandBuffer, uint vertexCount, uint startVertexLocation);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_draw_indexed")]
    internal static extern UIntPtr CommandBufferDrawIndexed(IntPtr commandBuffer, uint indexCount, uint startIndexLocation, int baseVertexLocation);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_draw_instanced")]
    internal static extern UIntPtr CommandBufferDrawInstanced(
        IntPtr commandBuffer,
        uint vertexCountPerInstance,
        uint instanceCount,
        uint startVertexLocation,
        uint startInstanceLocation);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_draw_indexed_instanced")]
    internal static extern UIntPtr CommandBufferDrawIndexedInstanced(
        IntPtr commandBuffer,
        uint indexCountPerInstance,
        uint instanceCount,
        uint startIndexLocation,
        int baseVertexLocation,
        uint startInstanceLocation);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_begin_occlusion_query")]
    internal static extern UIntPtr CommandBufferBeginOcclusionQuery(IntPtr commandBuffer, uint mode, uint index);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_end_occlusion_query")]
    internal static extern UIntPtr CommandBufferEndOcclusionQuery(IntPtr commandBuffer, uint index);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_end_render_pass")]
    internal static extern UIntPtr CommandBufferEndRenderPass(IntPtr commandBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_begin_compute_pass")]
    internal static extern UIntPtr CommandBufferBeginComputePass(IntPtr commandBuffer, in NativeComputePassDesc desc);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_compute_pipeline_layout")]
    internal static extern UIntPtr CommandBufferSetComputePipelineLayout(IntPtr commandBuffer, IntPtr pipelineLayout);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_compute_pipeline_state")]
    internal static extern UIntPtr CommandBufferSetComputePipelineState(IntPtr commandBuffer, IntPtr pipelineState);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_compute_descriptor_set")]
    internal static extern UIntPtr CommandBufferSetComputeDescriptorSet(IntPtr commandBuffer, uint index, IntPtr descriptorSet);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_set_compute_descriptor_sets")]
    internal static extern UIntPtr CommandBufferSetComputeDescriptorSets(
        IntPtr commandBuffer,
        uint startIndex,
        [In] IntPtr[]? descriptorSets,
        ulong descriptorSetCount);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_dispatch")]
    internal static extern UIntPtr CommandBufferDispatch(IntPtr commandBuffer, uint threadGroupCountX, uint threadGroupCountY, uint threadGroupCountZ);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_end_compute_pass")]
    internal static extern UIntPtr CommandBufferEndComputePass(IntPtr commandBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_begin_copy_pass")]
    internal static extern UIntPtr CommandBufferBeginCopyPass(IntPtr commandBuffer, in NativeCopyPassDesc desc);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_copy_resource")]
    internal static extern UIntPtr CommandBufferCopyResource(IntPtr commandBuffer, IntPtr destinationObject, IntPtr sourceObject);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_copy_buffer")]
    internal static extern UIntPtr CommandBufferCopyBuffer(
        IntPtr commandBuffer,
        IntPtr destination,
        ulong destinationOffset,
        IntPtr source,
        ulong sourceOffset,
        ulong copyBytes);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_copy_texture")]
    internal static extern UIntPtr CommandBufferCopyTexture(
        IntPtr commandBuffer,
        IntPtr destination,
        NativeSubresourceIndex destinationSubresource,
        uint destinationX,
        uint destinationY,
        uint destinationZ,
        IntPtr source,
        NativeSubresourceIndex sourceSubresource,
        uint sourceX,
        uint sourceY,
        uint sourceZ,
        uint copyWidth,
        uint copyHeight,
        uint copyDepth);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_copy_buffer_to_texture")]
    internal static extern UIntPtr CommandBufferCopyBufferToTexture(
        IntPtr commandBuffer,
        IntPtr destination,
        NativeSubresourceIndex destinationSubresource,
        uint destinationX,
        uint destinationY,
        uint destinationZ,
        IntPtr source,
        ulong sourceOffset,
        uint sourceRowPitch,
        uint sourceSlicePitch,
        uint copyWidth,
        uint copyHeight,
        uint copyDepth);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_copy_texture_to_buffer")]
    internal static extern UIntPtr CommandBufferCopyTextureToBuffer(
        IntPtr commandBuffer,
        IntPtr destination,
        ulong destinationOffset,
        uint destinationRowPitch,
        uint destinationSlicePitch,
        IntPtr source,
        NativeSubresourceIndex sourceSubresource,
        uint sourceX,
        uint sourceY,
        uint sourceZ,
        uint copyWidth,
        uint copyHeight,
        uint copyDepth);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_end_copy_pass")]
    internal static extern UIntPtr CommandBufferEndCopyPass(IntPtr commandBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_submit")]
    internal static extern UIntPtr CommandBufferSubmit(IntPtr commandBuffer, int allowHostWaiting);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_submit_with_fences")]
    internal static extern UIntPtr CommandBufferSubmitWithFences(
        IntPtr commandBuffer,
        [In] IntPtr[]? waitFences,
        ulong waitFenceCount,
        [In] IntPtr[]? signalFences,
        ulong signalFenceCount,
        int allowHostWaiting);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_wait")]
    internal static extern UIntPtr CommandBufferWait(IntPtr commandBuffer);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_command_buffer_try_wait")]
    internal static extern UIntPtr CommandBufferTryWait(IntPtr commandBuffer, out int outWaited);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_buffer_get_desc")]
    internal static extern UIntPtr BufferGetDesc(IntPtr buffer, out NativeBufferDesc outDesc);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_buffer_map")]
    internal static extern UIntPtr BufferMap(IntPtr buffer, ulong readBegin, ulong readEnd, out IntPtr outData);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_buffer_unmap")]
    internal static extern UIntPtr BufferUnmap(IntPtr buffer, ulong writeBegin, ulong writeEnd);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_resource_get_memory")]
    internal static extern UIntPtr ResourceGetMemory(IntPtr resourceObject, out NativeRhiDeviceMemoryHandle outMemory);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_memory_get_memory_type")]
    internal static extern UIntPtr DeviceMemoryGetMemoryType(IntPtr deviceMemory, out uint outMemoryType);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_device_memory_get_size")]
    internal static extern UIntPtr DeviceMemoryGetSize(IntPtr deviceMemory, out ulong outSize);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_query_heap_get_desc")]
    internal static extern UIntPtr QueryHeapGetDesc(IntPtr queryHeap, out NativeQueryHeapDesc outDesc);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_query_heap_get_timestamp_values")]
    internal static extern UIntPtr QueryHeapGetTimestampValues(
        IntPtr queryHeap,
        uint index,
        uint count,
        [Out] ulong[] values);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_query_heap_get_occlusion_values")]
    internal static extern UIntPtr QueryHeapGetOcclusionValues(
        IntPtr queryHeap,
        uint index,
        uint count,
        [Out] ulong[] values);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_query_heap_get_pipeline_statistics_values")]
    internal static extern UIntPtr QueryHeapGetPipelineStatisticsValues(
        IntPtr queryHeap,
        uint index,
        uint count,
        [Out] NativePipelineStatistics[] values);

    [DllImport(LibraryName, EntryPoint = "luna_rhi_descriptor_set_update_buffer_view")]
    internal static extern UIntPtr DescriptorSetUpdateBufferView(
        IntPtr descriptorSet,
        uint bindingSlot,
        uint firstArrayIndex,
        uint descriptorType,
        [In] NativeBufferViewDesc[]? views,
        uint viewCount);
